welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value estSurBisciut
	if(estSurBisciut()){
           ^